--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:e2e": "testcafe chrome tests/"
+    "test:e2e": "testcafe firefox tests/ui"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "chromium": "^3.0.3",
     "dotenv": "^17.2.2",
     "testcafe": "^3.7.2"
   }
